# clinic-back

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose-local.yml  docker-compose-production.yml  docker-compose-qa.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker_build_push.yml  release.yml
clinic/: asgi.py  urls.py  wsgi.py
clinic/approvals/: admin.py  apps.py  choices.py  factories.py  forms.py  models.py
clinic/approvals/api/: serializers.py  urls.py  views.py
clinic/approvals/migrations/: 0001_initial.py  0002_alter_joinrequest_package.py  0003_alter_joinrequest_status.py  0004_alter_joinrequest_uid_squashed_0008_alter_joinrequest_uid.py
clinic/approvals/tests/: test_admin.py  test_forms.py  test_models.py
clinic/dashboard/: apps.py
clinic/healthcare/: admin.py  apps.py  factories.py  filters.py  models.py
clinic/healthcare/migrations/: 0001_initial.py  0002_alter_service_uid_squashed_0006_alter_service_uid.py  0007_service_description.py  0008_service_no.py  0009_alter_service_description.py
clinic/healthcare/tests/: test_admin.py  test_models.py
clinic/inventory/: admin.py  apps.py  choices.py  factories.py  filters.py  managers.py  models.py
clinic/inventory/migrations/: 0001_initial.py  0002_remove_supply_charge.py  0003_supply_charge.py  0004_supply_unit_sales_price.py  0005_supply_qrcode.py  0006_alter_supply_uid_squashed_0010_alter_supply_uid.py  0011_supply_description_supply_expires_at_supply_lot_and_more.py  0012_delete_supply.py  0013_initial.py  0014_alter_supply_description.py  0015_supply_profit_share.py
clinic/inventory/tests/: test_admin.py  test_models.py
clinic/invoices/: admin.py  apps.py  choices.py  factories.py  filters.py  models.py
clinic/invoices/api/: validators.py
clinic/invoices/migrations/: 0001_initial.py  0002_alter_invoice_sub_total.py  0003_chargeitem_chargeservice.py  0004_alter_chargeitem_uid_alter_chargeservice_uid_and_more_squashed_0008_alter_chargeitem_uid_alter_chargeservice_uid_and_more.py  0009_delete_chargeitem.py  0010_chargeitem.py  0011_invoice_no.py  0012_invoice_due_date.py  0013_invoice_comment.py  0014_invoice_status.py  0015_alter_invoice_status.py  0016_invoice_signature.py
clinic/invoices/tests/: test_admin.py  test_models.py
clinic/patients/: admin.py  apps.py  choices.py  factories.py  filters.py  models.py
clinic/patients/api/: validators.py
clinic/patients/migrations/: 0001_initial.py  0002_patientreport.py  0003_alter_patientreport_document.py  0004_alter_patientreport_document.py  0005_alter_patient_uid_alter_patientreport_uid_squashed_0009_alter_patient_uid_alter_patientreport_uid.py  0010_patient_channel_patient_nid.py  0012_alter_patient_nid.py  (+11 more)
clinic/staff/: admin.py  apps.py  choices.py  factories.py  filters.py  models.py
clinic/system_management/: admin.py  admin_actions.py  apps.py  choices.py  factories.py  filters.py  forms.py  models.py  validators.py
clinic/users/: admin.py  choices.py  factories.py  filters.py  models.py
clinic/utils/: functions.py  models.py  notifications.py  validators.py
clinic/visits/: admin.py  apps.py  choices.py  factories.py  filters.py  flows.py  models.py
config/: .env-exmamples  api_router.py  exceptions.py  middleware.py  paginator.py  storages.py
config/settings/: base.py  local.py  production.py  qa.py  test.py
managed_context/: metadata.json
requirements/: base.txt  local.txt  production.txt  qa.txt
(+157 files in other folders)
